--- a/src/components/UI/Header/Header.module.css
+++ b/src/components/UI/Header/Header.module.css
@@ -2,41 +2,27 @@
   width: 100%;
   height: 100vh;
   top: 0;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  position: fixed;
   z-index: -1;
-  overflow: hidden;
-
-}
-.MailLogo{
-  position: relative;
-  margin-top: 10px;
-  height: 30px;
-  width: 30px;
-}
-
-.Logo{
-  position: relative;
-  float: left;
-  color: white;
-  left:10px;
+  transition-property: all;
+  transition-duration: 0.4s;
+  transition-timing-function: cubic-bezier(0, 0, 0, 1);
 
 }
 
-
-
-.root {
-  width: 40%;
-  height: 35vh;
-  position: relative;
-  float: right;
-  top: 25vh;
-  right: 10vw;
+.Header h1{
+  width: 100%;
+  padding: 5px;
+  margin: auto;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: Helvetica;
+  font-size: 150px;
+  color: #fff;
 }
 
-.title {
-  font-weight: bold;
-  font-size: 32px;
+@media (max-width:500px) {
+  .Header h1 {
+      font-size: 50px;
+  }
 }
