--- a/src/components/UI/Header/Header.module.css
+++ b/src/components/UI/Header/Header.module.css
@@ -7,7 +7,8 @@
   transition-property: all;
   transition-duration: 0.4s;
   transition-timing-function: cubic-bezier(0, 0, 0, 1);
-
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .Header h1{
