--- a/src/components/UI/SideDrawer/SideDrawer.module.css
+++ b/src/components/UI/SideDrawer/SideDrawer.module.css
@@ -7,39 +7,12 @@
   text-transform: capitalize;
   display: inline;
 }
-.ToolBar h1{
-  display: inline;
-  padding: 10px;
-  font-family: cursive;
-  font-style: oblique;
-  font-size: 44px;
-  color: white;
-  border-style: solid;;
-  border-radius: 6px;
-  border-color: white;
-  border-width: 4px;
 
-}
-
-.ToolBar h2{
-  position: fixed;
-  display: inline;
-  top: 5px;
-  right:15px;
-  margin-top: 0;
-}
-
-@media (max-width:500px) {
-  .ToolBar {
-    top: 15px;
-  }
-
-  .ToolBar h1 {
-    font-size: 24px;
-  }
-
-  .ToolBar h2 {
-    right:8px;
-  }
-
+.Lable{
+  position: relative;
+  float: right;
+  bottom: 10px;
+  padding:0;
+  margin-top:300px;
+  margin-left: 50px;
 }
